# meshzoo

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Makefile  README.md  circle.vtk  codecov.yml  justfile  pacman.vtk  pyproject.toml  setup.cfg  setup.py  sphere.vtk  tetrahedron.vtk  tox.ini  toy.vtk
.circleci/: config.yml
.github/workflows/: ci.yml
custom/: moebius2_tri  simple_arrow  sphere
examples/: __init__.py
examples/meshpy/: __init__.py  ball.py  cube.py  ellipse.py  lshape.py  lshape3d.py  pacman.py  rectangle.py  rectangle_with_hole.py  tetrahedron.py  torus.py
examples/mshr/: __init__.py  toy.py
examples/pygmsh/: __init__.py  screw.py
meshpy/: ball  ball.py  cube  cube.py  cylinder_tri  delaunay_checker  delaunay_maker  ellipse  ellipse.py  hexagon  lshape  lshape3d  moebius2_tri  pacman  rectangle  rectangle_with_hole  tetrahedron  torus  triangle  tube
meshzoo/: __about__.py  __init__.py  _cube.py  _disk.py  _rectangle.py  _sphere.py  _tube.py  ball.py  cube.py  cylinder.py  disk.py  helpers.py  hexagon.py  moebius.py  moebius2_tri.py  moebius_tri_alt.py  ngon.py  pseudomoebius.py  rectangle.py  simple_arrow.py  simple_shell.py  sphere.py  triangle.py  tube.py
meshzoo/custom/: __init__.py  cylinder_tri  cylinder_tri.py  hexagon.py  moebius2_tri.py  moebius_tri  moebius_tri.py  moebius_tri_alt  moebius_tri_alt.py  pseudomoebius  pseudomoebius.py  rectangle.py  refine.py  simple_arrow.py  simple_shell.py  sphere  sphere.py  triangle.py  tube.py
meshzoo/meshpy/: __init__.py  ball.py  cube.py  ellipse.py  lshape  lshape.py  lshape3d.py  pacman  pacman.py  rectangle.py  rectangle_with_hole.py  tetrahedron.py  torus.py
meshzoo/mshr/: __init__.py  toy.py
meshzoo/pygmsh/: screw.py
src/meshzoo/: __init__.py  _ball.py  _cube.py  _disk.py  _helpers.py  _moebius.py  _ngon.py  _platonic.py  _rectangle.py  _sphere.py  _triangle.py  _tube.py
test/: helpers.py  test.py  test_ball.py  test_cube.py  test_disk.py  test_meshzoo.py  test_moebius.py  test_ngon.py  test_rectangle.py  test_sphere.py  test_triangle.py
tests/: helpers.py  test_ball.py  test_cube.py  test_disk.py  test_meshzoo.py  test_midpoints.py  test_midpointsedges.py  test_moebius.py  test_ngon.py  test_rectangle.py  test_sphere.py  test_triangle.py  test_tube.py
