[metadata]
name = meshzoo
version = 0.5.4
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Collection of explicitly constructed meshes
url = https://github.com/nschloe/meshzoo
project_urls =
    Code=https://github.com/nschloe/meshzoo
    Issues=https://github.com/nschloe/meshzoo/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
    quadpy
    termplotlib
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
all = matplotlib
plot = matplotlib
